--- a/hello/index.html
+++ b/hello/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="refresh" content="3">
     <meta charset="utf-8">
-    <title>web-learning </title>
+    <title>web-learning-test </title>
 </head>
 
 <body >
